Closed Bug 732942 Opened 14 years ago Closed 14 years ago

IonMonkey: ArgumentsRectifier susceptible to infinite loops on arm

Categories

(Core :: JavaScript Engine, defect)

ARM
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mjrosenb, Unassigned)

Details

Attachments

(1 file)

I'd tried to use a sub instruction to break from a loop, but I forgot the default is to not set condition codes, so whoops.
Attachment #602869 - Flags: review?(jdemooij)
Attachment #602869 - Flags: review?(jdemooij) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: