Fix the arguments rectifier, we were not setting condition codes on the loop (bug 732942, r=jandem)